# zero2prod

./: .env  Cargo.toml
migrations/: 20240312183946_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
